--- a/API_REST_JAVA_SPRING_BOOT/dockerfile
+++ b/API_REST_JAVA_SPRING_BOOT/dockerfile
@@ -1,17 +1,12 @@
 FROM php:8.2-apache
 
-# Instala extensiones necesarias de PHP para PostgreSQL
-RUN apt-get update && apt-get install -y libpq-dev \
-    && docker-php-ext-install pdo_pgsql pgsql
-    
-# Copia el código fuente al contenedor
-COPY . /frontend
+# Instalar PostgreSQL extension
+RUN apt-get update && apt-get install -y libpq-dev && docker-php-ext-install pdo pdo_pgsql
 
-# Habilita mod_rewrite para URLs amigables
-RUN a2enmod rewrite
+# Copiar el frontend al directorio correcto de Apache
+COPY frontend/ /var/www/html/
 
-# Asignar permisos adecuados y permitir acceso
-RUN chown -R www-data:www-data /var/www/html \
-    && chmod -R 755 /var/www/html
+# Dar permisos
+RUN chown -R www-data:www-data /var/www/html/
 
 EXPOSE 80
