--- a/API_REST_JAVA_SPRING_BOOT/docker-compose.yml
+++ b/API_REST_JAVA_SPRING_BOOT/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: .
     ports:
-      - "8085:80"
+      - "8084:80"
     volumes:
       - .:/var/www/html
     depends_on:
@@ -18,9 +18,9 @@ services:
       POSTGRES_DB: productos
       POSTGRES_USER: usuario_app
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - ./sql:/docker-entrypoint-initdb.d
+      - postgres_data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
@@ -32,3 +32,6 @@ services:
       PGADMIN_DEFAULT_PASSWORD: admin123
     depends_on:
       - db
+
+volumes:
+  postgres_data:
